Update some seo fix search bar padding on ios Quick fix the bug on scrolling of ios, but breaking the resize in general.

--- a/public/src/app/views/resources/resources.component.scss
+++ b/public/src/app/views/resources/resources.component.scss
@@ -35,6 +35,7 @@ section.resources{
 			height: 38px;
 			font-size: 16px;
 			border: none;
+			padding: 0;
 			width: calc(100% - 60px)
 		}
 	}
